@@ -1,0 +1,1 @@
+vendor/src/github.com/docker/notary
