@@ -1,2 +1,1 @@
-./vendor
-./Godeps/_workspace
+vendor
